librbd: image create validates that pool supports overwrites

Fixes: http://tracker.ceph.com/issues/19081
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit a16beba7843539bef4e5035148253a7b594a5cfd)

Conflicts:
    src/librbd/image/CreateRequest.cc - kraken uses create_rados_ack_callback;
        in master, this has been renamed ceph_rados_callback